[FIX]fix code base on feadback