@@ -4,15 +4,20 @@ import com.challenge.ecommerce.users.models.location.District;
 import com.challenge.ecommerce.users.models.location.Province;
 import com.challenge.ecommerce.users.models.location.Ward;
 import com.challenge.ecommerce.users.services.ILocationApiService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.HttpServerErrorException;
+import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.List;
+import java.util.*;
 
 @Service
+@Slf4j
 public class LocationApiService implements ILocationApiService {
 
   @Value("${api.location.url}")
@@ -23,22 +28,40 @@ public class LocationApiService implements ILocationApiService {
   @Override
   public List<Province> getAllProvinces() {
     String url = apiLocationUrl + "p/";
-    return restTemplate
-        .exchange(url, HttpMethod.GET, null, new ParameterizedTypeReference<List<Province>>() {})
-        .getBody();
+    List<Province> provices = new ArrayList<>();
+    try {
+      provices =
+          restTemplate
+              .exchange(
+                  url, HttpMethod.GET, null, new ParameterizedTypeReference<List<Province>>() {})
+              .getBody();
+    } catch (HttpClientErrorException | HttpServerErrorException | ResourceAccessException e) {
+      log.error(e.getMessage());
+    }
+    return provices;
   }
 
   @Override
   public List<District> getDistrictsByProvince(int provinceCode) {
     String url = apiLocationUrl + "p/" + provinceCode + "?depth=2";
-    Province provide = restTemplate.getForObject(url, Province.class);
-    return provide != null ? provide.getDistricts() : List.of();
+    Province province = new Province();
+    try {
+      province = restTemplate.getForObject(url, Province.class);
+    } catch (HttpClientErrorException | HttpServerErrorException | ResourceAccessException e) {
+      log.error(e.getMessage());
+    }
+    return province != null ? province.getDistricts() : Collections.emptyList();
   }
 
   @Override
   public List<Ward> getWardsByDistrict(int districtCode) {
     String url = apiLocationUrl + "d/" + districtCode + "?depth=2";
-    District district = restTemplate.getForObject(url, District.class);
-    return district != null ? district.getWards() : List.of();
+    District district = new District();
+    try {
+      district = restTemplate.getForObject(url, District.class);
+    } catch (HttpClientErrorException | HttpServerErrorException | ResourceAccessException e) {
+      log.error(e.getMessage());
+    }
+    return district != null ? district.getWards() : Collections.emptyList();
   }
 }
